<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_inicio"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/item_msg"
        android:icon="@drawable/ic_baseline_mail_24"
        android:title="@string/mensajes" />
    <item
        android:id="@+id/item_grupos"
        android:icon="@drawable/ic_baseline_groups_24"
        android:title="@string/grupos" />
    <item
        android:id="@+id/item_tareas"
        android:icon="@drawable/ic_baseline_folder_24"
        android:title="@string/tareas" />
    <item
        android:id="@+id/item_perfil"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/perfil" />
</menu>