<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SubgrupoFragment"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_subgrupo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_subgroup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/subgrupos"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/publicaciones"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:padding="10dp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tv_new_publi_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/nueva_publi"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_baseline_add_24"
        android:drawablePadding="5dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_publis_sub"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />



</androidx.appcompat.widget.LinearLayoutCompat>